Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignTextTextObjField.quorum
class Main
    Text v
    v:SetValue(text)
    action Main
        Test(v)
    end

    action Test(text var)
        if var = text
            output "passed"
        end
    end
end
