Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignNumObjTextObjField.quorum
class Main
    Number v
    action Main
        v:SetValue(Test())
    end

    action Test() returns Number
        Text var
        var:SetValue("text")
        return var
    end
end